--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,8 +6,6 @@ html, body {
     color: $faded-black;
     font-family: 'Montserrat', sans-serif;
     background-color: $off-white;
-    width: 100vw;
-    height: 100vh;
 }
 
 a {
